--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -71,6 +71,12 @@
   	<description></description>
   	<servlet-class>com.ubaid.app.controller.servlets._OverUnder</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>_AHOURegisterar</servlet-name>
+  	<display-name>_AHOURegisterar</display-name>
+  	<description></description>
+  	<servlet-class>com.ubaid.app.controller.servlets._AHOURegisterar</servlet-class>
+  </servlet>
   
   <servlet-mapping>
   	<servlet-name>_WelcomeEvents</servlet-name>
@@ -116,6 +122,10 @@
   <servlet-mapping>
   	<servlet-name>_OverUnder</servlet-name>
   	<url-pattern>/_OverUnder</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>_AHOURegisterar</servlet-name>
+  	<url-pattern>/_AHOURegisterar</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
