--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,6 +77,12 @@
   	<description></description>
   	<servlet-class>com.ubaid.app.controller.servlets._AHOURegisterar</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>HADRegistrar</servlet-name>
+  	<display-name>HADRegistrar</display-name>
+  	<description></description>
+  	<servlet-class>com.ubaid.app.controller.servlets.HADRegistrar</servlet-class>
+  </servlet>
   
   <servlet-mapping>
   	<servlet-name>_WelcomeEvents</servlet-name>
@@ -126,6 +132,10 @@
   <servlet-mapping>
   	<servlet-name>_AHOURegisterar</servlet-name>
   	<url-pattern>/_AHOURegisterar</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>HADRegistrar</servlet-name>
+  	<url-pattern>/HADRegistrar</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
