--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -83,6 +83,12 @@
   	<description></description>
   	<servlet-class>com.ubaid.app.controller.servlets.HADRegistrar</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>_deleteRegisteredOutcome</servlet-name>
+  	<display-name>_deleteRegisteredOutcome</display-name>
+  	<description></description>
+  	<servlet-class>com.ubaid.app.controller.servlets._deleteRegisteredOutcome</servlet-class>
+  </servlet>
   
   <servlet-mapping>
   	<servlet-name>_WelcomeEvents</servlet-name>
@@ -136,6 +142,10 @@
   <servlet-mapping>
   	<servlet-name>HADRegistrar</servlet-name>
   	<url-pattern>/HADRegistrar</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>_deleteRegisteredOutcome</servlet-name>
+  	<url-pattern>/_deleteRegisteredOutcome</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
