--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,46 +6,10 @@
   <display-name>Archetype Created Web Application</display-name>
   
   <servlet>
-  	<servlet-name>_WelcomeEvents</servlet-name>
-  	<display-name>_WelcomeEvents</display-name>
+  	<servlet-name>AppRequestHandler</servlet-name>
+  	<display-name>AppRequestHandler</display-name>
   	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._WelcomeEvents</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_OnStart</servlet-name>
-  	<display-name>_OnStart</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._OnStart</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_Sport</servlet-name>
-  	<display-name>_Sport</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._Sport</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_Events</servlet-name>
-  	<display-name>_Events</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._Events</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_SubEvent</servlet-name>
-  	<display-name>_SubEvent</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._SubEvent</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_track</servlet-name>
-  	<display-name>_track</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._track</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>notification</servlet-name>
-  	<display-name>notification</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets.notification</servlet-class>
+  	<servlet-class>com.ubaid.app.controller.servlets.AppRequestHandler</servlet-class>
   </servlet>
   <servlet>
   	<servlet-name>_notification</servlet-name>
@@ -53,99 +17,14 @@
   	<description></description>
   	<servlet-class>com.ubaid.app.controller.servlets._notification</servlet-class>
   </servlet>
-  <servlet>
-  	<servlet-name>TrackPage</servlet-name>
-  	<display-name>TrackPage</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets.TrackPage</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_AssianHandicap</servlet-name>
-  	<display-name>_AssianHandicap</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._AssianHandicap</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_OverUnder</servlet-name>
-  	<display-name>_OverUnder</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._OverUnder</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_AHOURegisterar</servlet-name>
-  	<display-name>_AHOURegisterar</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._AHOURegisterar</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>HADRegistrar</servlet-name>
-  	<display-name>HADRegistrar</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets.HADRegistrar</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>_deleteRegisteredOutcome</servlet-name>
-  	<display-name>_deleteRegisteredOutcome</display-name>
-  	<description></description>
-  	<servlet-class>com.ubaid.app.controller.servlets._deleteRegisteredOutcome</servlet-class>
-  </servlet>
   
   <servlet-mapping>
-  	<servlet-name>_WelcomeEvents</servlet-name>
-  	<url-pattern>/start</url-pattern>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-  	<servlet-name>_OnStart</servlet-name>
-  	<url-pattern>/_OnStart</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>_Sport</servlet-name>
-  	<url-pattern>/_Sport</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>_Events</servlet-name>
-  	<url-pattern>/_Events</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>_SubEvent</servlet-name>
-  	<url-pattern>/_SubEvent</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>_track</servlet-name>
-  	<url-pattern>/_track</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>notification</servlet-name>
-  	<url-pattern>/notification</url-pattern>
+  	<servlet-name>AppRequestHandler</servlet-name>
+  	<url-pattern>/AppRequestHandler</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
   	<servlet-name>_notification</servlet-name>
   	<url-pattern>/_notification</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>TrackPage</servlet-name>
-  	<url-pattern>/TrackPage</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>_AssianHandicap</servlet-name>
-  	<url-pattern>/_AssianHandicap</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>_OverUnder</servlet-name>
-  	<url-pattern>/_OverUnder</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>_AHOURegisterar</servlet-name>
-  	<url-pattern>/_AHOURegisterar</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>HADRegistrar</servlet-name>
-  	<url-pattern>/HADRegistrar</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>_deleteRegisteredOutcome</servlet-name>
-  	<url-pattern>/_deleteRegisteredOutcome</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
