remote server error zip header not found

--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,7 @@
 	</distributionManagement>
  
   <build>
-<!-- <finalName>VilliusBetbrainWebProject</finalName> -->    
-    <finalName>app1</finalName>
+	<finalName>VilliusBetbrainWebProject</finalName>
     <plugins>
 		<plugin>
             <groupId>org.apache.tomcat.maven</groupId>
